Edits according to Lorna's comments

--- a/Methods.tex
+++ b/Methods.tex
@@ -10,15 +10,15 @@ For all experiments, the cells were grown in M9 supplemented with 0.2\% (w/v) gl
 Cells were grown overnight from a -80\celsius\ glycerol stock in 5 mL medium at 37\celsius, shaking at 150 rpm. In the morning, the cells were diluted 1:300 into 15 mL of medium and grown at 37\celsius, shaking at 150 rpm until they reached an \od\ of 0.2-0.3 (mid-exponential phase).
 Alternatively, a 15 mL culture was inoculated using a -80\celsius\ glycerol stock, and placed at 37\celsius\ with stirring in a turbidostat device (OGIBio), which measured \od\ and diluted cells at 3 min intervals, in order to keep them at a constant \od\ of 0.2.
 \subsubsection*{Halo labelling}
-The same labelling protocol as in \cite{Lepore2023} was used. A volume of cells equivalent to 1 mL at \od=0.2 was centrifuged (8000 rpm) and resuspended in 1 mL of fresh medium. 5 µL of JF549 dye (Janelia Fluor Halo-tag Ligand, Promega) was added (final concentration 1 µM) and the cells were further incubated for 1h at 37\celsius\ in the dark, shaking at 150 rpm.
+The same labelling protocol was used from a previous study \cite{Lepore2023}. A volume of cells equivalent to 1 mL at \od=0.2 was centrifuged (8000 rpm) and resuspended in 1 mL of fresh medium. 5 µL of JF549 dye (Janelia Fluor Halo-tag Ligand, Promega) was added (final concentration 1 µM) and the cells were further incubated for 1h at 37\celsius\ in the dark, shaking at 150 rpm.
 \subsubsection*{DNA labelling}
 When relevant, cellular DNA was labelled by adding Sytox Green (Invitrogen) at a concentration of 500 nM, at the same time as the JF549 dye. It was incubated as described above.
 \subsubsection*{Gam overexpression}
-For experiments where Gam was over-expressed, arabinose was added to the cells during the labelling step, at 1\% final concentration. Arabinose (at the same concentration) was also added to the medium for subsequent washes, and in the agar-pad to maintain exposure during imaging.
+For experiments where Gam was over-expressed, arabinose was added to the cells during the labelling step, at 1\% final concentration. Arabinose (at the same concentration) was also added to the medium for subsequent washes, and in the agarose-pad to maintain exposure during imaging.
 \subsubsection*{Dye removal}
 The cells were centrifuged for 3 min at 8000 rpm, the supernatant discarded, and the pellet resuspended in 1 mL of fresh medium and transferred to a new tube to avoid the dyes sticking to the plastic of the tube. This procedure was repeated 3 times to fully remove unbound dye. The cells were finally resuspended in 200 µL medium.
 \subsubsection*{Sample preparation}
-Agar-pads were prepared by dissolving 2\% agarose in culture medium. In experiments with ciprofloxacin, the antibiotic was added to the agar-pad at the desired final concentration. After the dye removal step, 5 µL of cells were added on the agar-pad, and left to settle for 10 min at 37\celsius\ in the dark before imaging.
+Agarose-pads were prepared by dissolving 2\% agarose in culture medium. In experiments with ciprofloxacin, the antibiotic was added to the agarose-pad at the desired final concentration. After the dye removal step, 5 µL of cells were added on the agarose-pad, and left to settle for 10 min at 37\celsius\ in the dark before imaging.
 
 \subsection*{Microscopy}
 \subsubsection*{Microscope set-up}
@@ -35,13 +35,13 @@ The general data analysis workflow is described in Supp. Figure \ref{SIFig:analy
 We improved a self-supervised denoising neural network by making it use the previous and next frames in the timelapse and performing deconvolution simultaneously. Our method is based on a previously developed method \cite{Ollion2021} which uses an encoder-decoder convolutional neural network that performs denoising (DNet) as well as a fully connected neural network that recovers the noise distribution used to compute the self-supervised loss. In order to include previous and next frames, we modified the architecture of DNet so that the encoder is shared between frames (t-1, t and t+1), i.e. it processes each frame independently. At each contraction level, the residual tensors corresponding to each frame are combined using a 1x1 convolution and fed to the decoder. The same applies for the feature tensors and the last level of the decoder. The decoder only predicts the central frame (t) and the same self-supervised loss is used. We observe a dramatic improvement of denoising performance, which implies that the proposed architecture benefits from using information from adjacent frames. It has been shown that performing denoising and deconvolution simultaneously dramatically improves deconvolution performance \cite{Kobayashi2020}. We computed the experimental PSF of our system by averaging hundreds of bead images cropped in a 33x33 pixels area around each bead, and normalised so that values sum to one. The obtained averaged images were used during training as kernel for a 2D convolution at the end of the neural network. At prediction time, convolution was removed.
 
 \paragraph{Cell segmentation}
-The 16-image brightfield Z-stack was first cropped to 5 images on one side of the focus, as required by our segmentation algorithm. The 5-image stack was used as input to Talissman, a U-net-based segmentation algorithm. In brief, the U-net model predicts a Euclidean distance map, where the value of each pixel is its predicted distance to the nearest background pixel. A watershed algorithm is then applied to retrieve cell contours. This approach allowed us to accurately segment cells from bright-field images, including when they formed tight clusters. Any overlapping cells were manually removed from the analysis. Following segmentation, post-filters were applied to dilate the segmented regions slightly and to remove any cells that were in contact with the edge of the image and might therefore be cropped. Finally, all segmentation masks were visually inspected and curated to remove cells that were incorrectly segmented ($\sim$1\% of total cells).
+The 16-image brightfield Z-stack was first cropped to 5 images on one side of the focus, as required by our segmentation algorithm. The 5-image stack was used as input to Talissman, a U-net-based segmentation algorithm. In brief, the U-net model predicts a Euclidean distance map, where the value of each pixel is its predicted distance to the nearest background pixel. A watershed algorithm is then applied to retrieve cell contours. This approach allowed us to accurately segment cells from bright-field images, including when they formed tight clusters. Any overlapping cells were manually removed from the analysis. Following segmentation, post-filters were applied to dilate the segmented regions slightly and to remove any cells that were in contact with the edge of the image and might, therefore, be cropped. Finally, all segmentation masks were visually inspected and curated to remove cells that were incorrectly segmented ($\sim$1\% of total cells).
 
 \paragraph*{Detection of RecB spots}
 Fluorescent spots were seg\-men\-ted using a seeded watershed algorithm on the Laplacian transform of the denoised RecB image. The quality of the segmentation was visually assessed by overlaying the segmentation mask on the raw fluorescence images. The segmentation parameters were optimised, but no manual curation was applied to avoid introducing user bias in the results.
 
 \paragraph*{Classification of RecA structures}
-We designed a U-net-based deep-learning model capable of classifying objects (in this case, cells) based on the type of RecA structure they contained (Supp. Figure \ref{SIFig:object_class}). In brief, the model was given as input the cell segmentation mask and the RecA-SYFP2 fluorescence image, and it provided as output a single class for each object: diffuse fluorescence, RecA spot, or RecA filament. The model's predictions were 84\% accurate, as evaluated against a test set of manually labelled data that was not used in training.
+We designed a U-net-based deep-learning model capable of classifying objects (in this case, cells) based on the type of RecA structure they contained (Supp. Figure \ref{SIFig:object_class}). In brief, the model was given as input the cell segmentation mask and the RecA-SYFP2 fluorescence image, and it provided as output a single class for each object: diffuse fluorescence; RecA spot; or RecA filament. The model's predictions were 84\% accurate, as evaluated against a test set of manually labelled data that was not used in training.
 
 \paragraph*{Nucleoid segmentation}
 Sytox Green fluorescence images were processed with a rolling-ball noise subtraction (radius 6 pixels), and nucleoids segmented by a seeded watershed algorithm. The seed threshold was determined by Otsu's method \cite{Otsu1979}. Any segmented regions that were in contact with each other within the same cell were merged, and segmented regions smaller than 5 pixels were excluded. Regions with weak signal-to-noise ratio (SNR < 2) were also excluded. For each segmented region, the SNR was computed as follows:
@@ -60,7 +60,7 @@ The PyBerries package, combined with the pandas library, allowed to easily impor
 \paragraph*{Fitting RecB spot lifetimes}
 The lifetime of individual RecB spots was computed in BACMMAN. The resulting lifetime histogram was fitted with a bi-exponential decay function of the type $y=a_1.e^{-k_1.t} + a_2.e^{-k_2.t}$. To improve the reliability of the fits, a bootstrapping procedure was used. For each group, 100 resamplings with replacement were made, and fitted individually. Each fit parameter was estimated as the median of all fitted parameters.
 
-Because we were unable to differentiate whether the disappearance of a fluorescent spot was due to photobleaching or to unbinding and returning to the pool of diffusing molecules, we considered that the fitted "spot disappearance rates" $k_1$ and $k_2$ were a sum of RecB's dissociation rate from DNA and the dye's bleaching rate ($k_1=k_{d1}+k_b$ and $k_2=k_{d2}+k_b$, with $k_{d1}$ and $k_{d2}$ the two RecB dissociation rates, and $k_b$ the bleaching rate). The bleaching rate was calculated for each dataset, as described in Supp. Note \ref{note:dye_bleaching} and Supp. Figure \ref{SIFig:dye_bleaching} and subtracted to retrieve the true RecB dissociation rates from DNA.
+Because we were unable to differentiate whether the disappearance of a fluorescent spot was a result of photobleaching or to unbinding and returning to the pool of diffusing molecules, we considered that the fitted "spot disappearance rates" $k_1$ and $k_2$ were a sum of RecB's dissociation rate from DNA and the dye's bleaching rate ($k_1=k_{d1}+k_b$ and $k_2=k_{d2}+k_b$, with $k_{d1}$ and $k_{d2}$ the two RecB dissociation rates, and $k_b$ the bleaching rate). The bleaching rate was calculated for each dataset, as described in Supp. Note \ref{note:dye_bleaching} and Supp. Figure \ref{SIFig:dye_bleaching} and subtracted to retrieve the true RecB dissociation rates from DNA.
 
 \paragraph*{Estimation of the rate of RecB recruitment to DSBs}
 For each timelapse, we quantified the total number of RecB spots that were bound to DSBs. This could not be achieved by thresholding on the lifetime histograms, as a significant number of short-lived spots correspond to DSB-bound RecB molecules. To estimate the total number of DSB-bound RecB, we considered that all RecB spots that disappeared with a slower rate (as determined by the bi-exponential decay fit) were DSB-bound. We multiplied the total number of spots that appeared during the timelapse by the proportion of slow-dissociating spots retrieved from the lifetime histogram fits, which gave us an estimate of the number of DSB-bound RecB per timelapse, from which a number of recruitment events per cell per hour was calculated. This rate was corrected for photobleaching of the fluorescent dye, to account for non-fluorescent RecBCD complexes binding to DSBs.
